<resources>
    <string name="app_name">Here</string>
    <string name="class1">Class1</string>
    <string name="class2">Class2</string>
    <string name="class3">Class3</string>
    <string name="class4">Class4</string>
    <string name="class5">Class5</string>
    <string name="class1date">Class1date</string>
    <string name="class2date">Class2date</string>
    <string name="class3date">Class3date</string>
    <string name="class4date">Class4date</string>
    <string name="class5date">Class5date</string>
    <string name="submit_btn">Submit</string>
    <string name="notification_title">Notification</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="toolbar_title">Notes App</string>

    <string name="menu_bottom_1">Classes</string>
    <string name="menu_bottom_2">Here</string>
    <string name="menu_bottom_3">Notifications</string>

    <string name="CodeGenText">Start your class Attendance.</string>
    <string name="CodeGenBtnText">Start</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="email_field_hint">Email</string>
    <string name="password_field_hint">Password</string>
    <string name="sign_in_heading">Sign In</string>
    <string name="sign_in_btn_txt">Sign In</string>
    <string name="sign_up_btn_txt">Sign Up</string>
    <string name="sign_up_heading">Sign up</string>
    <string name="name_field_hint">Your name</string>
    <string name="addClassName">Class Name</string>
    <string name="btnSeeSession">View Sessions</string>
    <string name="btnSeeStudent">View Students</string>
    <string name="btnAddClass">Make Class</string>
    <string name="btnJoinClass">Join Class</string>
    <string name="classNameHint">Class Name</string>
    <string name="classSearchBtn">Search</string>

    <string name="classList">CLASS LIST</string>
    <string name="sessionList">SESSION LIST</string>
    <string name="studentList">STUDENT LIST</string>
    <string name="startSession">Start a new session</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_code_btn_txt">Enter code</string>
    <string name="attendance_heading">attendance</string>
    <string name="class_list_label">Pick your class</string>
    <string name="late_students_label">Late Students:</string>
    <string name="absent_students_label">Absent Students:</string>
</resources>