<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgLight"
    android:orientation="vertical"
    android:padding="10dp"
    android:paddingTop="40dp"
    tools:context=".ClassInfoFragment">

    <TextView
        android:id="@+id/courseName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="36sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/courseTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnSeeSession"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnSeeSession" />

    <Button
        android:id="@+id/btnSeeStudent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnSeeStudent" />

    <Button
        android:id="@+id/newSessionBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/startSession" />

</LinearLayout>