<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ClassListStudent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/classListTitle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="CLASS LIST"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/class1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/classname1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/class1"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/classtime1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="TextView"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/class2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/classname2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/class2"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/classtime2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="TextView"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/class3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="252dp">

        <TextView
            android:id="@+id/classname3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/class3"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/classtime3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="TextView"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/class4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/classname4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/class4"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/classtime4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="TextView"
            android:textAlignment="center" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/class5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/classname5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/class5"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/classtime5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="TextView"
            android:textAlignment="center" />
    </LinearLayout>

</LinearLayout>