<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ClassHistoryTeacher"
    android:orientation="vertical">

    <TextView
        android:id="@+id/classListTitle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="CLASS LIST"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/class1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/classDate1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#C4C4C4"
            android:gravity="center"
            android:text="@string/class1date"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/classAttendance1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#C4C4C4"
            android:gravity="center"
            android:text="Class Time"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/class2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/classDate2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#C4C4C4"
            android:gravity="center"
            android:text="@string/class2date"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/classAttendance2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#C4C4C4"
            android:gravity="center"
            android:text="Class Time"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/class3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="252dp">

        <TextView
            android:id="@+id/classDate3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#C4C4C4"
            android:gravity="center"
            android:text="@string/class3date"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/classAttendance3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#C4C4C4"
            android:gravity="center"
            android:text="Class Time"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/class4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/classDate4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#C4C4C4"
            android:gravity="center"
            android:text="@string/class4date"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/classAttendance4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#C4C4C4"
            android:gravity="center"
            android:text="Class Time"
            android:textAlignment="center" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/class5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/classDate5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#C4C4C4"
            android:gravity="center"
            android:text="@string/class5date"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/classAttendance5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#C4C4C4"
            android:gravity="center"
            android:text="Class Time"
            android:textAlignment="center" />
    </LinearLayout>

</LinearLayout>